testsuite/escript/errors/errors002-var-same-name-as-function.err1
Non-identifier declared as a variable: 'print'
